syntax = "proto3";

package item;

option go_package = "./pb;pb";

service OrderService {
  rpc FindOne (OrderById) returns (Order) {}
  rpc FindOneWithItem (OrderById) returns (OrderWithItemInfo) {}
}

message OrderById {
  int32 id = 1;
}

message Order {
  int32 id = 1;
  float price = 2;
}

message OrderWithItemInfo {
  int32 id = 1;
  float price = 2;
  // message Item {
  //   int32 id = 1;
  //   string name = 2;
  // }
  item.Item item = 3;
}
